// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filesByDirectory generates asynchronously an array containing the file when path is a file 1`] = `
Array [
  Array [
    "fixture/level1/file1a",
  ],
]
`;

exports[`filesByDirectory generates asynchronously an array of files when given path is a directory containing only files 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory generates one array per directory when given path is a directory containing sub-directories 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
]
`;

exports[`filesByDirectory omits previously processed directories 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
]
`;

exports[`filesByDirectory omits previously processed files 1`] = `
Array [
  Array [
    "fixture/level1/file1a",
  ],
]
`;

exports[`filesByDirectory omits previously processed nested directories 1`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
]
`;

exports[`filesByDirectory omits previously processed nested directories 2`] = `
Array [
  Array [
    "fixture/level1/level2/level3/file3a",
    "fixture/level1/level2/level3/file3b",
  ],
  Array [
    "fixture/level1/level2/file2a",
    "fixture/level1/level2/file2b",
    "fixture/level1/level2/link-to-directory",
    "fixture/level1/level2/link-to-grand-parent-directory",
    "fixture/level1/level2/link-to-parent-directory",
  ],
]
`;
